RIB-177: add test